User API and swagger
